# jira-mcp-server

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
specs/001-jira-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-jira-mcp-server/checklists/: requirements.md
specs/001-jira-mcp-server/contracts/: mcp-tools.yaml
src/jira_mcp_server/: __init__.py  config.py  jira_client.py  models.py  schema_cache.py  server.py  validators.py
src/jira_mcp_server/tools/: __init__.py  comment_tools.py  filter_tools.py  issue_tools.py  search_tools.py  workflow_tools.py
tests/: __init__.py
tests/contract/: __init__.py  test_comment_tools.py  test_filter_tools.py  test_issue_tools.py  test_search_tools.py  test_workflow_tools.py
tests/integration/: __init__.py  test_jira_client.py
tests/unit/: __init__.py  test_comment_tools.py  test_config.py  test_filter_tools.py  test_issue_tools.py  test_models.py  test_schema_cache.py  test_search_tools.py  test_server.py  test_tools_init.py  test_validators.py  test_workflow_tools.py
