[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-jira-server"
version = "0.5.1"
description = "FastMCP server for self-hosted Jira with full CRUD operations, custom fields, JQL search, filters, workflows, and comments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Troy Larson", email = "troy.larson@gmail.com"},
]
keywords = ["jira", "mcp", "model-context-protocol", "fastmcp", "jira-api", "self-hosted", "workflow", "jql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.22.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "hatch",
]

[project.scripts]
fastmcp-jira-server = "jira_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/troylar/jira-mcp-server"
Documentation = "https://github.com/troylar/jira-mcp-server#readme"
Repository = "https://github.com/troylar/jira-mcp-server"
Issues = "https://github.com/troylar/jira-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/jira_mcp_server",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "-v",
]

[tool.coverage.run]
source = ["src/jira_mcp_server"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
